<resources>
    <string name="app_name">Phone Book</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="createActivity">Add Contact</string>
    <string name="additional_information">Additional Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="contacts">Contacts</string>
    <string name="add">+</string>
    <string name="empty" />
    <string name="contact_info">Contact Info</string>
    <string name="category">Category</string>
    <string name="viewActivity">View Contact</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="editActivity">Edit Contact</string>
    <string name="edit_contact">Edit Contact</string>
</resources>