<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/editContactTv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/edit_contact"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/contactNameEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:hint="@string/contact_name"
        android:inputType="text"
        android:ems="10"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phoneNumberEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:ems="10"
        android:autofillHints="" />

    <EditText
        android:id="@+id/additionalInfoEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:hint="@string/additional_information"
        android:text="@string/empty"
        android:inputType="textMultiLine"
        android:ems="10"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/categoryS"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:ems="10"
        android:background="@android:drawable/btn_dropdown" />

    <Button
        android:id="@+id/editContactBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="center"
        android:text="Edit Contact"
        android:onClick="editContact"/>
</LinearLayout>